fixed width error on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -38,6 +38,11 @@
 .container {
   margin-left: 0px ! important;
 }
+@media screen and (min-width: 480px) {
+    .container {
+        margin-right: 5px;
+    }
+}
 .redditComments {
   font-size: 14px;
 }
